--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,174 @@
   html {
     font-size: 100%;
   }
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  
+  html {
+    font-size: 100%;
+    font-family: 'Ubuntu', Arial, sans-serif;
+    font-weight: 600;
+  }
+  
+  body {
+    background: #d8d8d8;
+  }
+  
+  main {
+    width: 1020px;
+    margin: auto;
+  }
+  
+  .keyboard {
+    display: grid;
+    grid-row-gap: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    background: #ffffff;
+  }
+  
+  .keyboard__row {
+    display: grid;
+    grid-gap: 10px;
+    grid-row-gap: 10px;
+    height: 50px;
+  }
+  
+  .keyboard__key {
+    display: flex;
+    flex-direction: row;
+    cursor: pointer;
+    border-radius: 3px;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    background: rgb(78, 80, 109);
+  }
+  
+  [data-fn="false"].active {
+    box-shadow: inset 0px 1px 2px 1px rgba(0,0,0,.9), inset 0 0 20px 2em rgba(255,255,255,.2);
+  }
+  
+  [data-fn="true"].active {
+    box-shadow: inset 0px 1px 2px 1px rgba(0,0,0,.9), inset 0 0 20px 2em rgba(255,255,255, 0);
+  }
+  
+  [data-fn="false"].active .letter,
+  [data-fn="true"].active .letter {
+    color: #776969;
+  }
+  
+  [data-fn="true"],
+  [data-code="ArrowLeft"],
+  [data-code="ArrowUp"],
+  [data-code="ArrowDown"],
+  [data-code="ArrowRight"],
+  [data-code="Backquote"]{
+    background: rgb(51, 45, 45);
+    box-shadow: inset rgba(0,0,0,.75) -1px -1px 2px, inset rgba(161, 160, 160, 0.9) 1px 1px 2px, rgba(0,0,0,.8) 1px 1px 2px -1px;
+  }
+  
+  [data-fn="true"] > .letter {
+    font-size: 16px;
+    color: #ffffff;
+  }
+  
+  [data-code="CapsLock"] {
+    width: 150px;
+  }
+  
+  [data-code="ShiftLeft"] {
+    width: 150px;
+  }
+  
+  [data-code="ShiftRight"] {
+    width: 60px;
+  }
+  
+  [data-code="Enter"] {
+    width: 100px;
+  }
+  
+  [data-code="Tab"] {
+    width: 76px;
+  }
+  
+  [data-code="ControlLeft"] {
+    width: 80px;
+  }
+  
+  [data-code="ControlRight"] {
+    width: 80px;
+  }
+  
+  [data-code="Backspace"] {
+    width: 115px;
+  }
+  
+  [data-code="Space"] {
+    width: 420px;
+  }
+  
+  [data-code="AltLeft"],
+  [data-code="AltRight"] {
+    width: 56px;
+  }
+  
+  
+  
+  .active {
+    background: rgb(75, 115, 167);
+  }
+  
+  .letter {
+    margin-right: 15px;
+    font-size: 25px;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .subtitle, .hint {
+    color: #ffffff;
+  }
+  
+  textarea.output {
+    resize: none;
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+    box-sizing: border-box;
+    font-size: 18px;
+    letter-spacing: 1px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+  }
+  
+  .sub {
+    width: 100%;
+    margin-bottom: 26px;
+    color: #ffffff;
+    text-align: center;
+    transition: all .2s ease;
+    width: 50%;
+  }
+  
+  .sub.sub-active:not(:empty) {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 0;
+    font-size: 23px;
+    width: 50%;
+    width: 50%;
+  }
+  
+  .sub.sub-active:not(:empty) ~ .letter.sub-inactive {
+    color: #ffffff;
+    font-size: 16px;
+    text-align: center;
+    padding-right: 10px;
+    width: 50%;
+  }
